# douyin-downloader

./: AGENTS.md  Dockerfile  README.md  README.zh-CN.md  config.example.yml  docker-compose.yml  pyproject.toml  requirements.txt  web_server.py
.github/workflows/: auto-sync-and-build.yml
cli/: main.py
config/: config_loader.py  default_config.py
core/: api_client.py  audio_extraction.py  downloader_base.py  downloader_factory.py  ffmpeg.py  live_downloader.py  live_replay_downloader.py  mix_downloader.py  music_downloader.py  retry_executor.py  silent_audio.py  transcript_manager.py  url_parser.py  user_downloader.py  video_downloader.py
core/user_modes/: base_strategy.py  post_strategy.py
server/: app.py
storage/: database.py  file_manager.py
tests/: test_api_client.py  test_audio_extraction.py  test_cli_main.py  test_comments_download_behavior.py  test_config_loader_save.py  test_database.py  test_database_history.py  test_database_migration.py  test_download_proxy_passthrough.py  test_downloader_base_perf.py  test_downloader_naming_templates.py  test_file_manager.py  test_filename_sanitization.py  test_live_downloader.py  test_live_replay_downloader.py  test_live_replay_remux.py  test_media_quality.py  test_mix_downloader.py  test_naming.py  test_silent_audio.py  test_transcript_manager_audio.py  test_url_parser.py  test_user_downloader_modes.py  test_user_mode_strategies.py  test_video_downloader.py
utils/: naming.py  validators.py
web/: index.html
